# hc12-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
src/: baudrates.rs  commands.rs  configuration.rs  device.rs  error.rs  lib.rs  modes.rs  paramaters.rs  programming.rs  speeds.rs
src/configuration/: baudrate.rs  channel.rs  command.rs  config.rs  mod.rs  power.rs
src/device/: builder.rs  device.rs  mod.rs  resources.rs  transitions.rs
src/modes/: at.rs  mod.rs  stolen.rs  transparent.rs
