[package]
name = "hc12-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = { version = "0.8.0", features = ["defmt-03"] }
seq-macro = "0.3.5"

[dev-dependencies]
# Lets us mock the HAL for testing
embedded-hal-mock = {version = "0.11.1", features = ["eh1"]}
