[package]
name = "hc12-rs"
license = "MIT"
description = "A strongly typed, and rusty builder for programming HC-12 radios"
version = "0.3.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.8.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
