[package]
name = "hc12-rs"
license = "MIT"
repository = "https://github.com/thelenlucas/hc12-rs/"
description = "A strongly typed, and rusty builder for programming HC-12 radios"
version = "0.3.2"
edition = "2021"
keywords = ["no-std", "communication", "embedded-io", "embedded-hal"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.8.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
